# cpdeflec

./: CMakeLists.txt  README.md  build.sh  build2.sh  camera.c  camera.h  commath.c  commath.h  cpdeflec.c  cpdeflec.h  cpdeflec.py  deflect.py  fitting.c  fitting.h  huerel.csv  main.c  pattern.c  pattern.h  profile.c  profile.h  profile.i  run.sh  test.c  wscript
experiments/: bearings.py  checkint.py  interrors.py  output.csv  output1.ods  test.py  wximage.py
old/: camera.py  deflect.py  pattern.py  profile.py  profile.py-backup  profile.py-backup3  profile.py-backup4  slowbackup.tar
